--- a/src/main/resources/layout/style.css
+++ b/src/main/resources/layout/style.css
@@ -174,6 +174,10 @@
     -fx-background-color: darkseagreen;
 }
 
+.list-cell-selected {
+    -fx-background-color: darkseagreen;
+}
+
 .ping-5-bars {
     -fx-text-fill: greenyellow;
 }
@@ -204,4 +208,8 @@
 
 .error {
     -fx-text-fill: red;
+}
+
+.account-type {
+    -fx-text-fill: -secondary-light-light-color;
 }
