--- a/src/main/resources/layout/style.css
+++ b/src/main/resources/layout/style.css
@@ -1,3 +1,16 @@
+/*
+ * Minosoft
+ * Copyright (C) 2020 Moritz Zwerger
+ *
+ * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along with this program.If not, see <https://www.gnu.org/licenses/>.
+ *
+ * This software is not affiliated with Mojang AB, the original developer of Minecraft.
+ */
+
 * {
     -primary-color: #448aff;
     -primary-light-color: #83b9ff;
@@ -75,11 +88,12 @@
 }
 
 .list-cell {
+    -fx-border-width: 3px;
     -fx-background-color: -secondary-color;
 }
 
 .list-cell:selected {
-    -fx-background-color: -secondary-dark-color;
+    -fx-background-color: -secondary-color;
 }
 
 .list-cell:filled:hover {
@@ -171,11 +185,13 @@
 }
 
 .list-cell-connected {
-    -fx-background-color: darkseagreen;
+    -fx-border-color: #00aa00;
+    -fx-border-width: 3px;
 }
 
 .list-cell-selected {
-    -fx-background-color: darkseagreen;
+    -fx-border-color: #00aa00;
+    -fx-border-width: 3px;
 }
 
 .ping-5-bars {
