Improvements, fixes, LogPrintStream
The server list cell now has a border according to its connection state: Connecting/Loading: Yellow, Disconnecting: Orange, Failed: Red, Playing: Green

Some fixes with multithreading in the connection.
MultiBlockChange with AIR will not throw a NullPointerException
All calls to System.out and System.err will be logged with the logger

--- a/src/main/resources/layout/style.css
+++ b/src/main/resources/layout/style.css
@@ -189,6 +189,21 @@
     -fx-border-width: 3px;
 }
 
+.list-cell-connecting {
+    -fx-border-color: yellow;
+    -fx-border-width: 3px;
+}
+
+.list-cell-disconnecting {
+    -fx-border-color: orange;
+    -fx-border-width: 3px;
+}
+
+.list-cell-failed {
+    -fx-border-color: red;
+    -fx-border-width: 3px;
+}
+
 .list-cell-selected {
     -fx-border-color: #00aa00;
     -fx-border-width: 3px;
