--- a/src/main/resources/assets/minosoft/layout/dialogs/login/mojang.fxml
+++ b/src/main/resources/assets/minosoft/layout/dialogs/login/mojang.fxml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXPasswordField?>
-<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.*?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="hBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="de.bixilon.minosoft.gui.main.dialogs.login.MojangLoginController">
@@ -43,21 +41,21 @@
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                 </GridPane.margin>
             </Label>
-            <JFXTextField fx:id="email" GridPane.columnIndex="1">
+            <TextField fx:id="email" GridPane.columnIndex="1">
                 <GridPane.margin>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                 </GridPane.margin>
-            </JFXTextField>
+            </TextField>
             <Label fx:id="passwordLabel" text="PASSWORD" GridPane.rowIndex="1">
                 <GridPane.margin>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                 </GridPane.margin>
             </Label>
-            <JFXPasswordField fx:id="password" minWidth="-Infinity" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+            <PasswordField fx:id="password" minWidth="-Infinity" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                 <GridPane.margin>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                 </GridPane.margin>
-            </JFXPasswordField>
+            </PasswordField>
         </GridPane>
         <JFXButton fx:id="loginButton" disable="true" maxHeight="Infinity" maxWidth="Infinity" mnemonicParsing="false" text="LOGIN" GridPane.rowIndex="3" onAction="#login">
             <GridPane.margin>
