--- a/src/main/resources/assets/minosoft/eros/main/play/server/server_list.fxml
+++ b/src/main/resources/assets/minosoft/eros/main/play/server/server_list.fxml
@@ -38,7 +38,7 @@
                     <Insets left="5.0" right="5.0"/>
                 </GridPane.margin>
             </CheckBox>
-            <Button fx:id="addServerButtonFX" mnemonicParsing="false" text="Add Server" GridPane.columnIndex="4"/>
+            <Button fx:id="addServerButtonFX" onAction="#addServer" mnemonicParsing="false" text="Add Server" GridPane.columnIndex="4"/>
             <GridPane.margin>
                 <Insets top="5.0"/>
             </GridPane.margin>
