--- a/src/main/resources/assets/minosoft/eros/main/play/play.fxml
+++ b/src/main/resources/assets/minosoft/eros/main/play/play.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 <HBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="500.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/16" fx:controller="de.bixilon.minosoft.gui.eros.main.play.PlayMainController">
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
@@ -25,7 +27,40 @@
                 <Insets right="10.0"/>
             </GridPane.margin>
             <ListView fx:id="playTypeListViewFX" maxHeight="Infinity" maxWidth="Infinity" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS"/>
-            <AnchorPane fx:id="refreshPaneFX" GridPane.rowIndex="1"/>
+            <GridPane fx:id="refreshPaneFX" GridPane.rowIndex="1">
+                <columnConstraints>
+                    <ColumnConstraints hgrow="NEVER"/>
+                    <ColumnConstraints hgrow="ALWAYS"/>
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints vgrow="ALWAYS"/>
+                </rowConstraints>
+                <GridPane GridPane.columnIndex="1">
+                    <TextFlow fx:id="refreshHeaderFX" style="-fx-font-weight: bold; -fx-font-size: 20;">
+                        <GridPane.margin>
+                            <Insets bottom="5.0" right="5.0" top="5.0"/>
+                        </GridPane.margin>
+                        <Text text="Header"/>
+                    </TextFlow>
+                    <TextFlow fx:id="refreshText1FX" GridPane.rowIndex="1">
+                        <GridPane.margin>
+                            <Insets bottom="5.0" right="5.0"/>
+                        </GridPane.margin>
+                        <Text text="Text 1"/>
+                    </TextFlow>
+                    <TextFlow fx:id="refreshText2FX" GridPane.rowIndex="2">
+                        <GridPane.margin>
+                            <Insets bottom="5.0" right="5.0"/>
+                        </GridPane.margin>
+                        <Text text="Text 2"/>
+                    </TextFlow>
+                </GridPane>
+                <FontIcon iconLiteral="fas-sync-alt" iconSize="50">
+                    <GridPane.margin>
+                        <Insets left="5.0" right="15.0"/>
+                    </GridPane.margin>
+                </FontIcon>
+            </GridPane>
         </GridPane>
     </GridPane>
 </HBox>
